# Cadence

./: .gitignore  Aegis_MVP_Spec_v3.md  CLAUDE.md  DEPLOY.md  IMPLEMENTATION_PLAN.md  Makefile  PROGRESS.md  PROJECT_INIT_SUMMARY.md  README.md  WEBAPP_TEST_REPORT.md  WEBAPP_TEST_SUMMARY.txt  cadence.toml  pyproject.toml  test-a-initial.yaml
.playwright/: cli.config.json
.playwright-cli/: page-2026-03-11T16-38-59-687Z.yml  page-2026-03-11T16-39-32-631Z.yml  page-2026-03-11T16-39-42-832Z.yml  page-2026-03-11T17-03-43-291Z.yml  page-2026-03-11T17-03-45-202Z.yml  page-2026-03-11T17-03-56-678Z.yml
api/: __init__.py  negotiation.py  routes.py  server.py
deploy/: cadence-api.service  crontab.txt
design-idea/: webapp-design-overhaul.md
learning/: phase1-schemas-and-testing.md  phase3-calendar-fetcher.md  phase4-news-fetcher.md  phase5-agent-and-pipeline.md  phase6-api-server.md  phase7-negotiation.md  phase9-automation-hardening.md
scripts/: __init__.py  agent_daily_planner.py  build_context.py  config.py  pipeline.py  runtime.py  schemas.py
scripts/fetch/: __init__.py  calendar_fetcher.py  fetch_all.py  news_fetcher.py
tests/: __init__.py  conftest.py  test_agent_output.py  test_api.py  test_context_builder.py  test_day_lifecycle.py  test_draft_format.py  test_fetchers.py  test_negotiation.py  test_pipeline.py  test_schemas.py  test_task_lifecycle.py
tests/fixtures/: calendar_state.json  calendar_state_empty.json  calendar_state_malformed.json  (+8 more)
webapp/: app.js  index.html  package-lock.json  package.json  styles.css  tailwind.config.ts  vite.config.ts
(+22 files in other folders)
