[project]
name = "cadence"
version = "0.3.0"
description = "Personal intelligence system — daily note pipeline with interactive review"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Shu" }]

dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "feedparser>=6.0",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "tomli>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that call real APIs (deselect with -k 'not slow')",
    "integration: integration tests requiring vault setup",
]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = true
